# cse455

hw1/: CMakeCache.txt  CMakeLists.txt  Makefile  autocolor  cmake_install.cmake  conrgn  conrgn.cpp  dilate  dilate.cpp  erode  erode.cpp  hw1_report.docx  thresh  thresh.cpp  utils.cpp
hw1/images/: e030.pgm  e030_autocolor_7.pgm  e030_conrgn_6.pgm  e030_dilate_3.pgm  e030_dilate_4.pgm  e030_erode_2.pgm  e030_erode_5.pgm  e030_thresh_1.pgm  g006_autocolor_7.pgm  g006_conrgn_6.pgm  g006_dilate_3.pgm  g006_dilate_4.pgm  g006_erode_2.pgm  g006_erode_5.pgm  g006_thresh_1.pgm  kidney_autocolor_7.pgm  kidney_conrgn_6.pgm  kidney_dilate_3.pgm  kidney_dilate_4.pgm  kidney_erode_2.pgm  kidney_erode_5.pgm  kidney_thresh_1.pgm
hw2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  commands  findcirc  findcirc.cpp  hw2_report.docx  utils.cpp  utils.h
hw3/: CMakeCache.txt  CMakeLists.txt  Makefile  autocolor.cpp  cmake_install.cmake  kmeans  kmeans.cpp  utils.cpp  utils.h
hw4/: CMakeCache.txt  CMakeLists.txt  Makefile  autocolor  cmake_install.cmake  computeAccuracy  computeAccuracy.cpp  kmeans  kmeans.cpp  testing_set-naive_bayes.txt  testing_set-random_forest.txt  testingskin.arff  testingskin_data.txt  training_set-naive_bayes.txt  training_set-random_forest.txt  trainingskin.arff  trainingskin_data.txt
hw5/: benchmark_results.txt  hw5_graphs.xlsx  triangle.PPM  wongdk_hw5-report.doc
hw6/: autocolor  automate.py  compare  compare.cpp  conrgn  conrgn.cpp  how_to_use.txt  hw6  hw6.cpp  kmeans  kmeans.cpp  regions  regions.cpp  utils.cpp  wongdk_hw6.doc
(+266 files in other folders)
